feat: add prettierc

--- a/docs/1.List_of_development_tool.md
+++ b/docs/1.List_of_development_tool.md
@@ -53,7 +53,13 @@ BREAKING CHANGE: `extends` key in config file is now used for extending other co
 
 # **2. Tools and library**
 
-## **2.1 Husky & Commitlint**
+
+
+## **2.1. ESLint & Prettier**
+
+https://prettier.io/docs/en/configuration.html
+
+## **2.2 Husky & Commitlint**
 
 - **How to install**
 
