feat: add pages layouts

--- a/docs/1.List_of_development_tool.md
+++ b/docs/1.List_of_development_tool.md
@@ -1,4 +1,4 @@
-# Table of contents
+# **Table of contents**
 
 [**1. Coding convention**]()
 
@@ -18,6 +18,39 @@
 # **1. Coding convention**
 
 ## **1.5 Git flow and commit convention**
+
+### **Git flow**
+
+> Rule: Every feature and hotfix branch will be **checkout from** and **merge to** master branch
+
+- **Create a branch**
+
+  Branch name will follow with `[type]/[jira-id-with-title]`
+
+  ```bash
+  git checkout master
+  git pull
+  git checkout -b feat/cms-115-update-header-component # Branch will be feat/cms-115-update-header-component
+  ```
+
+- **Make changes**
+
+  After change or update source code, moving to commit step
+
+  ```bash
+  git add .
+  git commit -m "feat: do something"
+  git push -u feat/cms-115-update-header-component
+  ```
+
+- **Create a pull request**
+
+  Create a pull request to ask collaborators for feedback on your changes. Pull request review is so valuable that some repositories require an approving review before pull requests can be merged. If you want early feedback or advice before you complete your changes, you can mark your pull request as a draft.
+  
+  ![1.list-of-development-tools-pull-request.png](imgs/1.list-of-development-tools-pull-request.png)
+
+
+### **Commit convention**
 
 The Conventional Commits specification is a lightweight convention on top of commit messages. It provides an easy set of rules for creating an explicit commit history; which makes it easier to write automated tools on top of. This convention dovetails with SemVer, by describing the features, fixes, and breaking changes made in commit messages.
 
@@ -42,6 +75,7 @@ The commit contains the following structural elements, to communicate intent to 
 Additional types are not mandated by the Conventional Commits specification, and have no implicit effect in Semantic Versioning (unless they include a BREAKING CHANGE). A scope may be provided to a commit’s type, to provide additional contextual information and is contained within parenthesis, e.g., feat(parser): add ability to parse arrays.
 
 Example:
+
 ```bash
 git commit -m "docs: correct spelling of CHANGELOG"
 
@@ -53,11 +87,44 @@ BREAKING CHANGE: `extends` key in config file is now used for extending other co
 
 # **2. Tools and library**
 
-
-
 ## **2.1. ESLint & Prettier**
 
-https://prettier.io/docs/en/configuration.html
+- **Usage**
+
+  Using Command Palette (CMD/CTRL + Shift + P)
+
+  ```bash
+  1. CMD + Shift + P -> Format Document
+  #OR
+  1. Select the text you want to Prettify
+  2. CMD + Shift + P -> Format Selection
+  ```
+
+- **Settings**
+
+  Prettier uses cosmiconfig for configuration file support. This means you can configure Prettier via (in order of precedence):
+
+  - A "prettier" key in your package.json file.
+  - A .prettierrc file written in JSON or YAML.
+  - A .prettierrc.json, .prettierrc.yml, .prettierrc.yaml, or .prettierrc.json5 file.
+  - A .prettierrc.js, .prettierrc.cjs, prettier.config.js, or prettier.config.cjs file that exports an object using module.exports.
+    A .prettierrc.toml file.
+    The configuration file will be resolved starting from the location of the file being formatted, and searching up the file tree until a config file is (or isn’t) found.
+
+  Prettier intentionally doesn’t support any kind of global configuration. This is to make sure that when a project is copied to another computer, Prettier’s behavior stays the same. Otherwise, Prettier wouldn’t be able to guarantee that everybody in a team gets the same consistent results.
+
+  The options you can use in the configuration file are the same as the API options.
+
+  ```json
+  {
+    "trailingComma": "es5",
+    "tabWidth": 4,
+    "semi": false,
+    "singleQuote": true
+  }
+  ```
+
+For more detail: [https://prettier.io/docs/en/configuration.html](https://prettier.io/docs/en/configuration.html)
 
 ## **2.2 Husky & Commitlint**
 
