--- a/docs/developments/1.How_to_implement_layouts.md
+++ b/docs/developments/1.How_to_implement_layouts.md
@@ -1,14 +1,14 @@
 # **Table of contents**
 
-[**1. How to implement layouts**]()
+[**1. How to implement layouts**](#1-how-to-implement-layouts)
 
-- [1. Layout folder structure]()
-- [2. Layout config]()
-- [3. How to apply in page]()
+- [1. Layout folder structure](#1.1-layout-folder-structure)
+- [2. Layout config](#1.2-layout-config)
+- [3. How to apply in page](#1.3-how-to-apply-in-page)
 
-# **1. How to implement layouts**
+# **1. How to implement layouts**<a id="1-how-to-implement-layouts"></a>
 
-## **1.1 Layout folder structure**
+## **1.1 Layout folder structure**<a id="1.1-layout-folder-structure"></a>
 
 The layouts of the project are located in the layouts folder in the src . folder
 The name of the file follows the file name convention
@@ -22,7 +22,7 @@ The name of the file follows the file name convention
 // boilerplate-vue-arco\src\layouts\app-layout-default.vue
 ```
 
-## **1.2 Layout config**
+## **1.2 Layout config**<a id="1.2-layout-config"></a>
 
 The layout that will be loaded is implemented directly in `app.vue`
 
@@ -48,7 +48,7 @@ watch(
 )
 ```
 
-## **1.3. How to apply in page**
+## **1.3. How to apply in page**<a id="1.3-how-to-apply-in-page"></a>
 
 Pages will have a default layout of `AppLayoutDefault`
 To make another change to the page, it is necessary to set the layout for the meta attribute in the `router`
